[gd_scene load_steps=2 format=3 uid="uid://dm7rlv7308v1b"]

[ext_resource type="Script" uid="uid://dtvxq4xw7kgi1" path="res://main.gd" id="1_eewff"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eewff")

[node name="IPAddressEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 151.0
offset_bottom = 31.0
text = "127.0.0.1"

[node name="PortEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 50.0
offset_right = 69.5625
offset_bottom = 81.0
text = "8000"

[node name="ConnectButton" type="Button" parent="."]
layout_mode = 0
offset_top = 104.0
offset_right = 101.0
offset_bottom = 162.0
text = "Connect"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 182.0
offset_top = 94.0
offset_right = 222.0
offset_bottom = 117.0
text = "Status: Disconnected"

[node name="SendButton" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 201.0
offset_right = 296.0
offset_bottom = 273.0
text = "Send"

[node name="MessageEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 271.0
offset_top = 28.0
offset_right = 339.562
offset_bottom = 59.0
placeholder_text = "Message"
